--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,5 +1,13 @@
 <resources>
     <string name="app_name">ViewModel Example</string>
-    <string name="write_your_name">Write Your Name</string>
-    <string name="increment_counter">Increment Counter</string>
+
+    <string name="product_image">Product Image</string>
+    <string name="product_price">Price: Rs %1$.2f</string>
+    <string name="buy_product">Buy Product</string>
+    <string name="checkout">Checkout</string>
+    <string name="shopping_cart">Shopping Cart</string>
+    <string name="thank_you">Thank You</string>
+    <string name="thank_you_message">Thank you for purchasing %1$s. You will soon get an email confirming the order. Your product will be shipped within 4-5 days</string>
+    <string name="continue_shopping">Continue Shopping</string>
+    <string name="order_total">Order Total: Rs %1$.2f</string>
 </resources>
